--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,9 @@ dependencies {
 
 test {
     useJUnitPlatform()
+    /*
+    testLogging {
+        events "passed", "skipped", "failed", "standardOut", "standardError"
+    }
+     */
 }
