--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -10,19 +10,20 @@ on:
     branches: [ main ]
 
 jobs:
-  build:
-
+  run-tests:
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout
+     uses: actions/checkout@v2
     - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
         java-version: '16'
-        distribution: 'adopt'
+        distribution: 'correto'
         cache: gradle
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
       run: ./gradlew build
+    - name: Run tests
+      run: --tests "LeapYears"
