--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -14,12 +14,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-     uses: actions/checkout@v2
+      uses: actions/checkout@v2
     - name: Set up JDK 16
       uses: actions/setup-java@v2
       with:
         java-version: '16'
-        distribution: 'correto'
+        distribution: 'adopt'
         cache: gradle
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
