--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -24,5 +24,7 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
     - name: Build with Gradle
-      run: ./gradlew build --tests "LeapYears"
+      run: ./gradlew build
+
+
 
