--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -13,7 +13,7 @@ jobs:
   run-tests:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
+    - name: Step 1 - Checkout Branch
       uses: actions/checkout@v2
     - name: Set up JDK 16
       uses: actions/setup-java@v2
